# cloverpad-configurator-cli

./: .gitmodules  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs  shell.rs
core/: build.rs
udev/: 99-cloverpad.rules
