[package]
name = "cloverpad-configurator"
description = "Configurator for the More More Keypad!, a 3-key analog keypad for osu!"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cloverpad-core.workspace = true

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rustyline.workspace = true
shlex.workspace = true
